--- a/src/common/components/Header/Header.css
+++ b/src/common/components/Header/Header.css
@@ -12,23 +12,7 @@
   color: var(--app-main-color);
 }
 
-.phones-container  {
-  display: flex;
-  align-items: center;
-}
-
-.address-container {
-  display: flex;
-  align-items: center;
-  margin-left: 30px;
-}
-
-.Header__icon {
-  height: var(--icon-height);
-  margin-right: 10px;
-}
-
-.Header .information-container {
+.Header__information-container {
   display: flex;
   align-items: center;
 }
@@ -38,9 +22,4 @@
   width: var(--page-width);
   align-items: center;
   justify-content: space-between;
-}
-
-.Header__list {
-  display: flex;
-  flex-direction: column;
 }
