--- a/src/app/App.css
+++ b/src/app/App.css
@@ -16,7 +16,7 @@ body {
   margin: 0;
   min-height: 100vh;
   font-family: 'Exo 2', sans-serif;
-  background-image: radial-gradient(transparent, var(--base-background)), url('./background.jpg');
+  background-image: radial-gradient(transparent, var(--base-background)), url('app/background.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
